# C-Exercise

./: .gitignore  CMakeLists.txt  README.md
Problem 1 - XML Exercise/: BenXMLOutput.cpp  BenXMLOutput.h  BenXMLOutputTests.cpp  README.md  Serializer.cpp  Serializer.h  SerializerTests.cpp  main.cpp
Problem 2 - Roof Truss/: Bay.cpp  Bay.h  BenCustomTrussConstraintProvider.cpp  BenCustomTrussConstraintProvider.h  CuttingPlanner.cpp  CuttingPlanner.h  GeometryCalculator.cpp  GeometryCalculator.h  GreedySingleMemberSolver.cpp  GreedySingleMemberSolver.h  ISingleMemberSolver.h  ITrussConstraintProvider.h  README.md  TrussModels.h  main.cpp
